# wgsl_sorcery

./: .clinerules  Cargo.toml  LICENSE  SPEC.md
specs/: 1_INITIAL_NODE_GRAPH.md  3_NODE_CONNECTIONS.md  4_PREVIEW_WINDOW.md
src/: default.wgsl  input_system.rs  main.rs  node_to_wgsl_map.rs
src/node_graph/: README.md  canvas.rs  canvas_tests.rs  interactions.rs  mod.rs  model.rs  model_tests.rs  node_factory.rs  node_factory_tests.rs  pin_manager.rs  pin_manager_tests.rs  render.rs  ui_state.rs  ui_state_tests.rs
src/plugins/: mod.rs
src/plugins/input_system/: actions.rs  mappings.rs  mod.rs  plugin.rs  state.rs
src/shader_view/: README.md  mod.rs  shader_view.rs  systems.rs
src/systems/: mod.rs  spawn_node.rs
