[package]
name = "wgsl_sorcery"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_brp_mcp = "0.17.2"
bevy_egui = "0.38.0"
shadplay = { git = "https://github.com/alphastrata/shadplay/", branch = "main" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
