[package]
name = "wgsl_sorcery"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking", "jpeg", "png"] }
bevy_brp_extras = { version = "0.17.2", optional = true }
bevy_brp_mcp = { version = "0.17.2", optional = true }
bevy_egui = "0.38.0"
image = "0.25.9"

[features]
mcp = ["bevy_brp_extras", "bevy_brp_mcp"] 

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
